# fourengine

./: .editorconfig  .gitignore  Cargo.toml  README.md
books/: 7x6-ply4.txt  7x6-ply8.txt
examples/nodejs/: index.js
examples/webpack/: .eslintrc  bootstrap.js  browser.js  package.json  webpack.config.js
examples/webpack/js/: EngineWorker.js  GameModel.js  Solver.js  SvgBoard.js
examples/webpack/public/: index.html
src/: benchmark.rs  bitboard.rs  book.rs  constants.rs  engine.rs  game_state.rs  heuristic.rs  history_heuristic.rs  lib.rs  main.rs  move_bitmap.rs  position.rs  score.rs  trans_table.rs
wasm/: .gitignore  .npmignore  README.md  build-for-release.sh  index.js  lib.rs  package.json
www/: .eslintrc  .gitignore  .npmignore  Cargo.toml  bootstrap.js  browser.js  build-for-release.sh  index.js  lib.rs  package.json  tag-new-release.sh  webpack.config.js
www/js/: Board.js  EngineWorker.js  Game.js  GameModel.js  SearchWorker.js  SvgBoard.js  index.js
www/public/: index.html
