[package]
name = "fourengine"
version = "0.1.0"
authors = ["Jukka Pekkala", "Johan Nordlund"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
clap = "3.0.0-beta.2"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
