[package]
name = "fourengine"
version = "0.1.0"
authors = ["Jukka Pekkala", "Johan Nordlund"]
edition = "2018"

[features]
default = ["clap"]

[lib]
name = "fourengine"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
num-traits = "0.2"
num-derive = "0.2"
clap = { version = "3.0.0-beta.4", optional = true }

[profile.dev]
opt-level = 3
overflow-checks = false