[package]
name = "fourengine-wasm"
version = "0.1.0"
authors = ["Jukka Pekkala", "Johan Nordlund"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
fourengine = { path = "../", default-features = false }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
